--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/VraiGamin/cyber-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "json-web-token": "^3.2.0",
     "mssql": "^7.2.1",
     "nodemon": "^2.0.13",
     "tedious": "^12.2.0"
